  structure, making progress comparable.  Your level 53 is my level 53.

--Changed to eliminate the risk of recursive-knock-downs by placing rise marker
  near player starting position after knock-down.  Exploring knock-down level 
  to find power-ups is optional, but tempting (thanks Gregory Weir and Frank 
  Lantz).

--Improved accuracy of shadow drawing for objects. 





Version 15   2011-March-8

--Default player powers in tutorial stages now include extended range (thanks 
  Frank Lantz).

--Powers are now never decayed below level 1 on pass-up to higher self.

--Difficulty warning when entering a power-up is more clear (thanks 
  Darius Kazemi).

--Added a tutorial message about score and how to increase it.

--Fixed date stamping of graphics files in Source bundle (so that 'convert' is 
  not require to build) (thanks Malte Wessel).





Version 14    2011-February-22

--Fixed crash caused by language files that use extended ASCII characters 
  (thanks Malte Perenz).

--Changed to % instead of @ to quit from pause screen, because @ is 
  inaccessible on some non-US keyboards.

--Fixed so that % key to toggle playback display works even if speed control 
  keys are disabled.

--Fixed so that enter key is enabled on game quit/restart that happens in the 
  middle of the tutorial after enter has been explained (thanks Ian Bogost).

--Fixed so that game always fills screen vertically as much as it can, 
  preserving whole-multiple game pixels, regardless of aspect ratio.  Before, 
  it wasn't working properly in 16:9.

--Moved token level numbers up one pixel to make them easier to read, and 
  redesigned some of the token icons to make this shift possible (thanks 
  Daniel Benmergui).

--Added tool-tips marking the sub-level difficulty inside a token (thanks 
  Jonathan Blow).

--Token tool tips are now always shown instantly on mouse over (not just 3 
  times each).

--New, less severe formula for computing difficulty of levels inside tokens.
